--- a/server/public/testWHS2.css
+++ b/server/public/testWHS2.css
@@ -47,7 +47,7 @@ button.material-icons{
 	font-size:2.5em;
 }
 p {
-	font-size: medium;
+	font-size: small;
 	margin: 10px;
 }
 
@@ -88,13 +88,19 @@ p.tagText {
 left: 4px; 
 top: 4px; 
 background-color: #86b2b5;
-padding: 2%;
-padding-right: 10%;
+padding: 1%;
 border-radius: 5px;
 color: white;
 word-break: break-all;
 }
-
+/* Style the X button */
+button.xButton{
+margin-left: 15px;
+border:none;
+background-color:transparent;
+color:white;
+font-size:15px;
+}
 
 img {
 display: block;
