--- a/server/public/testWHS2.css
+++ b/server/public/testWHS2.css
@@ -92,6 +92,31 @@ padding: 1%;
 border-radius: 5px;
 color: white;
 word-break: break-all;
+width: fit-content;
+}
+#Popup{
+	background: white;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    width: 54%;
+    margin-left: 10%;
+	z-index:2;
+}
+#header{
+	display:flex;
+	flex-direction:column;
+}
+div.suggestDiv{
+	display: flex;
+    justify-content: space-between;
+}
+.NWArrow{
+	border: none;
+    background-color: transparent;
+    font-size: 150%;
+    color: darkblue;
+    margin-right: 2%;
 }
 /* Add Tag */
 p.AddTag{
