--- a/server/public/testWHS2.css
+++ b/server/public/testWHS2.css
@@ -84,7 +84,7 @@ margin:20px;
 }
 
 /* Tag styling */
-.tagText {
+p.tagText {
 left: 4px; 
 top: 4px; 
 background-color: #86b2b5;
@@ -95,6 +95,21 @@ word-break: break-all;
 width: fit-content;
 border: none;
 }
+button.tagText{
+	left: 4px; 
+top: 4px; 
+background-color: #86b2b5;
+padding: 1%;
+border-radius: 5px;
+color: white;
+word-break: break-all;
+width: fit-content;
+border: none;
+margin: 1%;
+}
+.dropdown_text {
+	color: grey;
+}
 #Popup{
 	background: white;
     border-style: solid;
@@ -103,6 +118,11 @@ border: none;
     width: 54%;
     margin-left: 10%;
 	z-index:2;
+}
+.SelectRow{
+	display:flex;
+	flex-wrap:wrap;
+	margin-top:10px;
 }
 #header{
 	display:flex;
